--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="p-5 mb-4 bg-light rounded-3 text-center">
   <div class="container-fluid py-5 text-center">
     <h1 class="display-5 fw-bold">91714193 이강봉</h1>
-    <p>캡스톤</p>
+    <p>웹어플리케이션보안(캡스톤디자인)</p>
     <button class="btn btn-primary btn-lg" type="button" routerLink="/register">
       Register
     </button>
