--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -61,5 +61,18 @@
     />
   </div>
 
+  <div class="mb-3">
+    <label for="exampleInputEmail6" class="form-label">
+      핸드폰 번호 | phone number
+    </label>
+    <input
+      type="text"
+      [(ngModel)]="phone"
+      [ngModelOptions]="{ standalone: true }"
+      class="form-control"
+      id="exampleInputEmail6"
+    />
+  </div>
+
   <input type="submit" class="btn btn-primary" value="사용자등록" />
 </form>
