--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -15,24 +15,51 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="/">
+            <i class="bi bi-house-fill"></i> Home</a
+          >
         </li>
         <li *ngIf="checkLoggedIn()" class="nav-item">
-          <a class="nav-link" routerLink="/profile">프로필</a>
+          <a class="nav-link" routerLink="/profile">
+            <i class="bi bi-person"></i> 프로필</a
+          >
         </li>
         <li *ngIf="checkLoggedIn()" class="nav-item">
-          <a class="nav-link" routerLink="/dashboard">대시보드</a>
+          <a class="nav-link" routerLink="/dashboard">
+            <i class="bi bi-clipboard"></i> 대시보드</a
+          >
+        </li>
+        <li *ngIf="checkLoggedIn()" class="nav-item">
+          <a class="nav-link" routerLink="/list">
+            <i class="bi bi-card-list"></i> 사용자리스트</a
+          >
+        </li>
+        <li *ngIf="checkLoggedIn()" class="nav-item">
+          <a class="nav-link" routerLink="/cert">
+            <i class="bi bi-bank"></i> 인증서발급</a
+          >
+        </li>
+        <li *ngIf="checkLoggedIn()" class="nav-item">
+          <a class="nav-link" routerLink="/qrgen">
+            <i class="bi bi-qr-code"></i> 로그인용 QR생성</a
+          >
         </li>
       </ul>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li *ngIf="!checkLoggedIn()" class="nav-item">
-          <a class="nav-link" routerLink="/login">로그인</a>
+          <a class="nav-link" routerLink="/login">
+            <i class="bi bi-door-open"></i> 로그인</a
+          >
         </li>
         <li *ngIf="!checkLoggedIn()" class="nav-item">
-          <a class="nav-link" routerLink="/register">사용자등록</a>
+          <a class="nav-link" routerLink="/register">
+            <i class="bi bi-person-plus"></i> 사용자등록</a
+          >
         </li>
         <li *ngIf="checkLoggedIn()" class="nav-item">
-          <a class="nav-link" (click)="onLogoutClick()">로그아웃</a>
+          <a class="nav-link" (click)="onLogoutClick()">
+            <i class="bi bi-door-closed"></i> 로그아웃</a
+          >
         </li>
       </ul>
     </div>
