--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<br />
 <div *ngIf="name">
   <h2 class="page-header">사용자 이름: {{ name }}</h2>
   <form>
@@ -10,6 +11,24 @@
     <div class="form-group">
       <label>Token</label>
       <textarea class="form-control" rows="4" disabled> {{ token }} </textarea>
+    </div>
+    <div class="form-group">
+      <label for="privateKey">Private Key</label>
+      <textarea class="form-control" id="privateKey" rows="6" disabled>
+      {{ privateKey }}</textarea
+      >
+    </div>
+    <div class="form-group">
+      <label for="cert">Certificate </label>
+      <textarea class="form-control" id="cert" rows="6" disabled>
+      {{ cert }}</textarea
+      >
+    </div>
+    <div class="form-group">
+      <label for="caCert">CA Certificate </label>
+      <textarea class="form-control" id="caCert" rows="6" disabled>
+      {{ caCert }}</textarea
+      >
     </div>
   </form>
 </div>
