--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -1,8 +1,11 @@
+<br />
 <div *ngIf="name">
   <h2 class="page-header">사용자 이름: {{ name }}</h2>
   <br />
-  <p>
-    Username: {{ username }} <br />
-    Email: {{ email }}
-  </p>
+  <div class="alert-info">
+    <p>
+      Username: {{ username }} <br />
+      Email: {{ email }}
+    </p>
+  </div>
 </div>
