--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <br />
 <div *ngIf="name">
-  <h2 class="page-header">사용자 이름: {{ name }}</h2>
+  <h2 class="page-header">회원 이름: {{ name }}</h2>
   <form>
     <div class="form-group">
       <label>UserInfo</label>
