--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="p-5 mb-4 bg-light rounded-3 text-center">
-  <div class="container-fluid py-5 text-center">
+  <div class="container-fluid py-5 text-center" id="container">
     <h1 class="display-5 fw-bold">91714193 이강봉</h1>
     <p>웹어플리케이션보안(캡스톤디자인)</p>
     <button class="btn btn-primary btn-lg" type="button" routerLink="/register">
@@ -9,6 +9,14 @@
     <button class="btn btn-success btn-lg" type="button" routerLink="/login">
       Login
     </button>
+    <br /><br />
+    <a
+      href="https://drive.google.com/file/d/10C_AX7K0vxT8dd0c4XlivSac1OLGVHMz/view?usp=sharing"
+      download=""
+      type="application/vnd.android.package-archive"
+      target="_blank"
+      >App Download</a
+    >
   </div>
 </div>
 
@@ -18,32 +26,36 @@
       <div class="card" style="width: 18rem">
         <div class="card-body">
           <h5 class="card-title">최종장박봉</h5>
-          <h6 class="card-subtitle mb-2 text-muted">조이름</h6>
           <p class="card-text">RESERVE 통합 예약 웨이팅 시스템</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <h6 class="card-subtitle mb-2 text-muted">바로가기</h6>
+          <a href="#" class="card-link" target="_blank">link</a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card" style="width: 18rem">
-        <div class="card-body">
-          <h5 class="card-title">고객페이지</h5>
+        <div class="card-body" id="card1">
+          <h5 class="card-title">Github</h5>
           <h6 class="card-subtitle mb-2 text-muted">바로가기</h6>
-          <p class="card-text">고객전용 예약 시스템</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <p class="card-text">주소</p>
+          <a href="https://github.com/redb0ng" class="card-link" target="_blank"
+            >link</a
+          >
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card" style="width: 18rem">
-        <div class="card-body">
-          <h5 class="card-title">식당페이지</h5>
+        <div class="card-body" id="card2">
+          <h5 class="card-title">Instagram</h5>
           <h6 class="card-subtitle mb-2 text-muted">바로가기</h6>
-          <p class="card-text">식당전용 예약 시스템</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <p class="card-text">주소</p>
+          <a
+            href="https://www.instagram.com/redb0ng/"
+            class="card-link"
+            target="_blank"
+            >link</a
+          >
         </div>
       </div>
     </div>
