--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-light" style="background-color: #16992c">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/">MeanAuth</a>
+    <a class="navbar-brand" routerLink="/">KANGBONG</a>
     <button
       class="navbar-toggler"
       type="button"
