--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -1,8 +1,8 @@
 <br />
 <div *ngIf="name">
-  <h2 class="page-header">사용자 이름: {{ name }}</h2>
+  <h2 class="page-header">회원 이름: {{ name }}</h2>
   <br />
-  <div class="alert-info">
+  <div id="info">
     <p>
       Username: {{ username }} <br />
       Email: {{ email }}
