--- a/angular-src/src/app/components/home/home.component.scss
+++ b/angular-src/src/app/components/home/home.component.scss
@@ -1,6 +1,7 @@
 #container {
   background-color: #000000;
   color: #ffffff;
+  font-family: "Gugi", cursive;
 }
 
 .col {
@@ -9,6 +10,8 @@
 
 .card-body {
   background-color: #2c2b2b;
+  font-family: "Nanum Pen Script", cursive;
+  font-size: 23px;
 }
 
 #card1 {
