--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -36,8 +36,8 @@
       <div class="card" style="width: 18rem">
         <div class="card-body" id="card1">
           <h5 class="card-title">Github</h5>
-          <h6 class="card-subtitle mb-2 text-muted">바로가기</h6>
           <p class="card-text">주소</p>
+          <h6 class="card-subtitle mb-2 text-muted">바로가기</h6>
           <a href="https://github.com/redb0ng" class="card-link" target="_blank"
             >link</a
           >
@@ -48,8 +48,8 @@
       <div class="card" style="width: 18rem">
         <div class="card-body" id="card2">
           <h5 class="card-title">Instagram</h5>
-          <h6 class="card-subtitle mb-2 text-muted">바로가기</h6>
           <p class="card-text">주소</p>
+          <h6 class="card-subtitle mb-2 text-muted">바로가기</h6>
           <a
             href="https://www.instagram.com/redb0ng/"
             class="card-link"
@@ -61,3 +61,9 @@
     </div>
   </div>
 </div>
+
+<style>
+  @import url("https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&family=Playfair+Display:wght@500&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Gugi&family=Nanum+Pen+Script&display=swap");
+</style>
